# itkRWSegmentationFilter

./: .gitignore  README.md
Example/: CMakeLists.txt  cpuExample.cpp  gpuExample.cpp  mySegmentationProgram.cpp
MITKPlugin/: CMakeLists.txt
MITKPlugin/Plugins/: Plugins.cmake
MITKPlugin/Plugins/org.upf.rwsegmentation/: CMakeLists.txt  files.cmake  manifest_headers.cmake
MITKPlugin/Plugins/org.upf.rwsegmentation/documentation/UserManual/: Manual.dox
MITKPlugin/Plugins/org.upf.rwsegmentation/documentation/doxygen/: modules.dox
MITKPlugin/Plugins/org.upf.rwsegmentation/src/internal/: RWSegmentation.cpp  RWSegmentation.h  RWSegmentationControls.ui  org_upf_rwsegmentation_Activator.cpp  org_upf_rwsegmentation_Activator.h
MITKPlugin/Plugins/org.upf.rwsegmentation/src/internal/itkRWSegmentationFilter/: itkRWSegmentationFilter.h  itkRWSegmentationFilter.hxx
itkCudaRWSegmentationFilter/: itkCudaRWSegmentationFilter.h  itkCudaRWSegmentationFilter.hxx
itkRWSegmentationFilter/: itkRWSegmentationFilter.h  itkRWSegmentationFilter.hxx
